# atk

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-13-motivation-and-direction.md  2026-02-13-radical-simplify.md
schema/: atk-protocol-v1.json
src/atk/: __init__.py  cli.py  config.py  daemon.py  player.py
src/atk/cli/: __init__.py  commands.py  main.py  output.py
src/atk/daemon/: __init__.py  daemon.py  main.py  pipe_handler.py  player.py  registry.py  session.py
src/atk/protocol/: __init__.py  client.py  messages.py
src/atk/tui/: __init__.py  app.py  widgets.py
tests/: __init__.py  conftest.py  test_cli.py  test_daemon.py  test_protocol.py  test_registry.py  test_session.py
