[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atk"
version = "0.1.0"
description = "Non-blocking audio playback daemon with named pipe protocol"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "spinoza" }
]
dependencies = [
    "miniaudio>=1.60",
    "numpy>=1.24",
    "scipy>=1.10",
    "textual>=0.40",
    "click>=8.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
# Optional librosa for independent rate/pitch control (without it, rate affects pitch)
audio = [
    "librosa>=0.10",
]

[project.scripts]
atk = "atk.cli.main:main"
atk-tui = "atk.tui.app:main"
atk-daemon = "atk.daemon.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
